[gd_scene load_steps=27 format=3 uid="uid://b6catodorh3mu"]

[ext_resource type="Shader" path="res://Shaders/CrumbledPaper.gdshader" id="1_3so38"]
[ext_resource type="Script" uid="uid://dn02ekxewi45q" path="res://Scripts/Backdrop.gd" id="2_3cx6b"]
[ext_resource type="PackedScene" uid="uid://bfumbaprtnnwu" path="res://Scenes/World.tscn" id="3_wxwew"]
[ext_resource type="Script" uid="uid://botyddwy7pgi" path="res://Scripts/CameraFollowPlayer.gd" id="4_acvyw"]
[ext_resource type="Shader" uid="uid://cx0kddqltc7lu" path="res://Shaders/Drawing.gdshader" id="5_alh3a"]
[ext_resource type="Texture2D" uid="uid://ck4mr2mbcwals" path="res://Assets/Backdrop/sun.png" id="6_4q8tf"]
[ext_resource type="Script" uid="uid://dl0cglho8jpui" path="res://Scripts/Overlay.gd" id="7_x3xnh"]
[ext_resource type="FontFile" uid="uid://b6ixxpdy5in1g" path="res://Fonts/Schoolbell-Regular.ttf" id="8_8r6kd"]
[ext_resource type="Texture2D" uid="uid://cpe2c0i8bj32q" path="res://Assets/HUD/Filling/frame.png" id="9_tfod6"]
[ext_resource type="Texture2D" uid="uid://d2butkivrlbho" path="res://Assets/HUD/Scrap/frame.png" id="10_rajel"]
[ext_resource type="Script" uid="uid://2wmk6vtet1jv" path="res://Scripts/DeathHUD.gd" id="11_vvhu1"]
[ext_resource type="Shader" uid="uid://bqoitfi71frqv" path="res://Shaders/Death.gdshader" id="12_lbihj"]
[ext_resource type="Texture2D" uid="uid://cby0347efatav" path="res://Assets/DeathScreen/try-again-icon.png" id="13_wxwew"]
[ext_resource type="Texture2D" uid="uid://cftghwy0ry4kl" path="res://Assets/DeathScreen/give-up-icon.png" id="14_acvyw"]
[ext_resource type="Script" uid="uid://di4vwkpp2kh0j" path="res://Scripts/TryAgainButton.gd" id="14_alh3a"]
[ext_resource type="Script" uid="uid://b2wiguib2yok5" path="res://Scripts/GiveUpButton.gd" id="16_alh3a"]
[ext_resource type="Script" uid="uid://vc5mgp7yj82q" path="res://Scenes/PauseHUD.gd" id="17_4q8tf"]
[ext_resource type="Script" uid="uid://b2ahdboifpw5f" path="res://Scenes/ResumeButton.gd" id="18_x3xnh"]
[ext_resource type="Script" uid="uid://crgk5v2isrv2p" path="res://Scenes/Shop.gd" id="19_8r6kd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_raj38"]
shader = ExtResource("1_3so38")
shader_parameter/paper_scale = 1.396
shader_parameter/wrinkle_strength = 0.361
shader_parameter/crease_intensity = 0.866
shader_parameter/paper_color = Color(0.98241, 0.9702, 0.99, 1)
shader_parameter/shadow_color = Color(0.5175, 0.6325, 0.69, 1)
shader_parameter/noise_scale = 50.0
shader_parameter/detail_scale = 154.386
shader_parameter/camera_offset = Vector2(0, 0)
shader_parameter/parallax_strength = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8e0uq"]
shader = ExtResource("5_alh3a")
shader_parameter/opacity = 0.664
shader_parameter/blend_mode = 1

[sub_resource type="LabelSettings" id="LabelSettings_i0vto"]
font = ExtResource("8_8r6kd")
font_size = 40
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3jf1l"]
font = ExtResource("8_8r6kd")
font_size = 40
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_356ba"]
shader = ExtResource("12_lbihj")
shader_parameter/vignette_strength = 1.0
shader_parameter/vignette_radius = 0.9
shader_parameter/camera_zoom = Vector2(0.5, 0.5)
shader_parameter/grayscale_amount = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_i4lct"]
font = ExtResource("8_8r6kd")
font_size = 160
font_color = Color(1, 0, 0.0166664, 1)
outline_size = 20
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_wxwew"]
font = ExtResource("8_8r6kd")
font_size = 60
font_color = Color(1, 0, 0, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[node name="Game" type="Node2D"]

[node name="Parallax Background" type="CanvasLayer" parent="."]
layer = -2
follow_viewport_enabled = true

[node name="Backdrop" type="ColorRect" parent="Parallax Background" node_paths=PackedStringArray("camera_reference")]
material = SubResource("ShaderMaterial_raj38")
offset_right = 2304.0
offset_bottom = 1296.0
script = ExtResource("2_3cx6b")
camera_reference = NodePath("../../Camera")
parallax_speed = 0.1

[node name="World" parent="." instance=ExtResource("3_wxwew")]

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("4_acvyw")

[node name="Static Background" type="CanvasLayer" parent="Camera"]
layer = -1

[node name="Sun" type="Sprite2D" parent="Camera/Static Background"]
material = SubResource("ShaderMaterial_8e0uq")
position = Vector2(47.0001, 31)
scale = Vector2(0.4, 0.4)
texture = ExtResource("6_4q8tf")

[node name="HUD" type="CanvasLayer" parent="Camera"]

[node name="Game Overlay" type="Control" parent="Camera/HUD"]
layout_mode = 3
anchors_preset = 0
offset_left = 1016.0
offset_top = 10.0
offset_right = 1056.0
offset_bottom = 50.0
script = ExtResource("7_x3xnh")

[node name="HealthContainer" type="HBoxContainer" parent="Camera/HUD/Game Overlay"]
layout_mode = 0
offset_left = -183.0
offset_top = 30.0
offset_right = -143.0
offset_bottom = 70.0
scale = Vector2(0.35, 0.35)
alignment = 2

[node name="FillingContainer" type="HBoxContainer" parent="Camera/HUD/Game Overlay"]
layout_mode = 2
offset_left = 24.0
offset_top = 54.0
offset_right = 166.0
offset_bottom = 137.0

[node name="FillingLabel" type="Label" parent="Camera/HUD/Game Overlay/FillingContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_i0vto")

[node name="FillingIcon" type="TextureRect" parent="Camera/HUD/Game Overlay/FillingContainer"]
layout_mode = 2
texture = ExtResource("9_tfod6")
expand_mode = 2

[node name="ScrapContainer" type="HBoxContainer" parent="Camera/HUD/Game Overlay"]
layout_mode = 0
offset_top = 125.0
offset_right = 141.0
offset_bottom = 208.0

[node name="ScrapLabel" type="Label" parent="Camera/HUD/Game Overlay/ScrapContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_3jf1l")

[node name="ScrapIcon" type="TextureRect" parent="Camera/HUD/Game Overlay/ScrapContainer"]
layout_mode = 2
texture = ExtResource("10_rajel")
expand_mode = 2

[node name="DeathHUD" type="CanvasLayer" parent="Camera"]
script = ExtResource("11_vvhu1")

[node name="DeathScreen" type="ColorRect" parent="Camera/DeathHUD"]
visible = false
material = SubResource("ShaderMaterial_356ba")
offset_right = 1152.0
offset_bottom = 648.0

[node name="DeathText" type="Label" parent="Camera/DeathHUD"]
offset_left = 73.0
offset_top = 161.0
offset_right = 1086.0
offset_bottom = 381.0
text = "av altså mand :("
label_settings = SubResource("LabelSettings_i4lct")

[node name="TryAgainButton" type="Button" parent="Camera/DeathHUD/DeathText"]
layout_mode = 0
offset_left = 125.0
offset_top = 209.0
offset_right = 477.0
offset_bottom = 317.0
theme_type_variation = &"FlatButton"
icon = ExtResource("13_wxwew")
script = ExtResource("14_alh3a")

[node name="TryAgainText" type="Label" parent="Camera/DeathHUD/DeathText/TryAgainButton"]
layout_mode = 0
offset_left = 122.0
offset_top = 6.0
offset_right = 337.0
offset_bottom = 89.0
text = "prøv igen"
label_settings = SubResource("LabelSettings_wxwew")

[node name="GiveUpButton" type="Button" parent="Camera/DeathHUD/DeathText"]
layout_mode = 0
offset_left = 602.0
offset_top = 200.0
offset_right = 875.0
offset_bottom = 312.0
theme_type_variation = &"FlatButton"
icon = ExtResource("14_acvyw")
script = ExtResource("16_alh3a")

[node name="GiveUpText" type="Label" parent="Camera/DeathHUD/DeathText/GiveUpButton"]
layout_mode = 0
offset_left = 104.0
offset_top = 12.0
offset_right = 256.0
offset_bottom = 95.0
text = "giv op!"
label_settings = SubResource("LabelSettings_wxwew")

[node name="PauseHUD" type="CanvasLayer" parent="Camera"]
process_mode = 3
script = ExtResource("17_4q8tf")

[node name="PauseScreen" type="ColorRect" parent="Camera/PauseHUD"]
visible = false
material = SubResource("ShaderMaterial_356ba")
offset_right = 1152.0
offset_bottom = 648.0

[node name="PauseText" type="Label" parent="Camera/PauseHUD"]
offset_left = 73.0
offset_top = 161.0
offset_right = 1312.0
offset_bottom = 381.0
text = "drøm pauset    "
label_settings = SubResource("LabelSettings_i4lct")
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Camera/PauseHUD/PauseText"]
layout_mode = 0
offset_left = 125.0
offset_top = 209.0
offset_right = 477.0
offset_bottom = 317.0
theme_type_variation = &"FlatButton"
icon = ExtResource("13_wxwew")
script = ExtResource("18_x3xnh")

[node name="TryAgainText" type="Label" parent="Camera/PauseHUD/PauseText/ResumeButton"]
layout_mode = 0
offset_left = 122.0
offset_top = 6.0
offset_right = 337.0
offset_bottom = 89.0
text = "genoptag"
label_settings = SubResource("LabelSettings_wxwew")

[node name="GiveUpButton" type="Button" parent="Camera/PauseHUD/PauseText"]
layout_mode = 0
offset_left = 602.0
offset_top = 200.0
offset_right = 875.0
offset_bottom = 312.0
theme_type_variation = &"FlatButton"
icon = ExtResource("14_acvyw")
script = ExtResource("16_alh3a")

[node name="GiveUpText" type="Label" parent="Camera/PauseHUD/PauseText/GiveUpButton"]
layout_mode = 0
offset_left = 104.0
offset_top = 12.0
offset_right = 256.0
offset_bottom = 95.0
text = "giv op!"
label_settings = SubResource("LabelSettings_wxwew")

[node name="ShopHUD" type="CanvasLayer" parent="Camera"]
script = ExtResource("19_8r6kd")
